[package]
name = "social-ag"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A Rust client for Mastodon-compatible social platforms"
repository = "https://github.com/Seer-Systems-United/social-ag"

[dependencies]
chrono = "0.4.45"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
